compiler/testData/asJava/lightClasses/compilationErrors/ActualTypeAlias.kt
// IGNORE_BACKEND: ANY
// p.ActualTypeAliasKt
package p

actual typealias B = List<Int>